# DataNexu

./: .gitignore  Example_AdventureWorks.json  Example_TPCH.json  connections.json  pyproject.toml
data_nexus/: app.py
data_nexus/configuration_management/: db_credentials.py  metadata.py  utils.py
data_nexus/data_access/: metadata_models.py  mysql_metadata_reader.py  postgresql_metadata_reader.py
data_nexus/database_connections/: mysql_connection.py  postgresql_connection.py
data_nexus/graphs/: colors.py  graphs_processing.py
data_nexus/log_handle/: log.py
data_nexus/static/css/: erros.css  graph.css  menu.css  modal.css  navbar.css  properties_menu.css  styles.css
data_nexus/static/js/: data.js  debug.js  events.js  graph.js  graph_community.js  graph_free.js  models.js  validations.js
data_nexus/templates/: index.html
tests/: test_connections.py
